Closed Bug 1798063 Opened 3 years ago Closed 3 years ago

Pref set using `mach mochitest --setpref` is no longer reflected in value returned from SpecialPowers.getCharPref()

Categories

(Core :: Preferences: Backend, defect)

Firefox 108
defect

Tracking

()

RESOLVED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox106 --- unaffected
firefox107 --- wontfix
firefox108 --- fixed

People

(Reporter: botond, Assigned: botond)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

STR

In a local build, run ./mach mochitest --setpref apz.subtest=helper_scrollby_bug1531796.html gfx/layers/apz/test/mochitest/test_group_mainthread.html

Expected results

The SpecialPowers.getCharPref("apz.subtest", "") call here returns "helper_scrollby_bug1531796.html" (which then has the effect that only this subtest is run).

Actual results

The call returns an empty string (which then has the effect that all subtests are run).

This is a recent regression, but since the STR require a mach environment I'm not sure how to get a regression range.

The regressing bug here is bug 1782444. There appears to be a new "sanitization" mechanism which is preventing the value of the pref from being propagated from the parent process to the content process, which is where it's read.

Component: Mochitest → Preferences: Backend
Product: Testing → Core
Regressed by: 1782444

Tom, is the appropriate fix here to add apz.subtest to this allowlist?

Flags: needinfo?(tom)

Set release status flags based on info from the regressing bug 1782444

Yes, that's correct!

Flags: needinfo?(tom)
Assignee: nobody → botond
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: