Bug 1798063 - Allowlist the apz.subtest pref. r=tjr

Differential Revision: https://phabricator.services.mozilla.com/D160877